# council-harness

./: .gitignore  ARCHITECTURE.md  FINDINGS.md  LICENSE  README.md  config.example.yaml  pyproject.toml
council/: agent.py  cli.py  contracts.py  dashboard.py  loop.py  pipeline.py  prompts.py
demo/: council.tape  rollcall.tape
tests/: test_agent_cli.py  test_cli_helpers.py  test_contracts.py  test_loop_helpers.py  test_pipeline_helpers.py
